--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- MY CSS -->
-  <link rel="stylesheet" type=" text/css" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
 </head>
 
